API: round:str -> round_id:int (remove support for id "current")
